--- a/NoteApp/Base.lproj/Main.storyboard
+++ b/NoteApp/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="87U-3K-FXp">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="87U-3K-FXp">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
@@ -283,10 +283,23 @@
                                     <constraint firstAttribute="height" constant="748" id="dLw-vD-LxW"/>
                                 </constraints>
                             </mapView>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="xkR-GL-f3n">
+                                <rect key="frame" x="20" y="65" width="218" height="32"/>
+                                <segments>
+                                    <segment title="寵物用品"/>
+                                    <segment title="寵物餐廳"/>
+                                    <segment title="公園"/>
+                                </segments>
+                                <connections>
+                                    <action selector="modeChanged:" destination="W5t-mj-7vh" eventType="valueChanged" id="j37-IY-evN"/>
+                                </connections>
+                            </segmentedControl>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="xkR-GL-f3n" firstAttribute="top" secondItem="d79-vn-cBl" secondAttribute="top" constant="21" id="GKf-Ii-zDU"/>
                             <constraint firstItem="8Jq-DW-rWK" firstAttribute="top" secondItem="zS5-Pg-TbJ" secondAttribute="top" id="JaP-xO-NFz"/>
+                            <constraint firstItem="xkR-GL-f3n" firstAttribute="leading" secondItem="d79-vn-cBl" secondAttribute="leading" constant="20" id="Lyt-fO-Ha6"/>
                             <constraint firstItem="8Jq-DW-rWK" firstAttribute="leading" secondItem="d79-vn-cBl" secondAttribute="leading" id="Zdu-vA-W8t"/>
                             <constraint firstItem="8Jq-DW-rWK" firstAttribute="trailing" secondItem="d79-vn-cBl" secondAttribute="trailing" id="cSr-Ru-KKL"/>
                         </constraints>
@@ -320,7 +333,7 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Lcd-gc-16E">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="658"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p55-HX-YdT">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p55-HX-YdT">
                                 <rect key="frame" x="119" y="111" width="257" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="257" id="8Xg-8B-X7x"/>
@@ -330,7 +343,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z6F-Rl-srU">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z6F-Rl-srU">
                                 <rect key="frame" x="119" y="134" width="251" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="eJS-DD-VPT"/>
@@ -346,7 +359,6 @@
                                     <constraint firstAttribute="height" constant="50" id="dkR-WT-gZG"/>
                                     <constraint firstAttribute="width" constant="52" id="p3c-7Y-ouM"/>
                                 </constraints>
-                                <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <state key="normal" backgroundImage="plus.circle.fill" catalog="system"/>
                                 <connections>
                                     <segue destination="AM3-r8-Idg" kind="show" identifier="addPet" id="cYu-vb-fRv"/>
@@ -358,7 +370,6 @@
                                     <constraint firstAttribute="width" constant="52" id="Gxa-Ve-gpd"/>
                                     <constraint firstAttribute="height" constant="50" id="xQc-8G-C6g"/>
                                 </constraints>
-                                <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <state key="normal" backgroundImage="camera.circle.fill" catalog="system"/>
                                 <connections>
                                     <action selector="camera:" destination="UZb-3n-Tgo" eventType="touchUpInside" id="z5K-7X-Tcc"/>
@@ -370,16 +381,16 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="         Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E8X-fZ-hb1">
-                                <rect key="frame" x="171" y="71" width="140" height="22"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E8X-fZ-hb1">
+                                <rect key="frame" x="177" y="71" width="0.0" height="0.0"/>
                                 <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0dW-Et-phU">
-                                <rect key="frame" x="171" y="89" width="90" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0dW-Et-phU">
+                                <rect key="frame" x="170" y="89" width="91" height="21"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="90" id="1Fy-9n-n37"/>
+                                    <constraint firstAttribute="width" constant="91" id="1Fy-9n-n37"/>
                                     <constraint firstAttribute="height" constant="21" id="peu-1s-F5g"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="17"/>
@@ -415,7 +426,7 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="E8X-fZ-hb1" firstAttribute="leading" secondItem="sbU-0o-FAI" secondAttribute="leading" constant="171" id="3lt-wo-c2c"/>
+                            <constraint firstItem="E8X-fZ-hb1" firstAttribute="leading" secondItem="sbU-0o-FAI" secondAttribute="leading" constant="177" id="3lt-wo-c2c"/>
                             <constraint firstItem="Z6F-Rl-srU" firstAttribute="leading" secondItem="sbU-0o-FAI" secondAttribute="leading" constant="119" id="AAi-ft-4dW"/>
                             <constraint firstItem="fJr-mK-5Ve" firstAttribute="top" secondItem="UZh-XT-ZG8" secondAttribute="bottom" constant="25" id="GHK-Us-Hg9"/>
                             <constraint firstItem="UZh-XT-ZG8" firstAttribute="top" secondItem="gsb-dZ-kgE" secondAttribute="bottom" constant="7.5" id="HDQ-cF-7dy"/>
@@ -440,7 +451,7 @@
                             <constraint firstItem="sbU-0o-FAI" firstAttribute="bottom" secondItem="Rbk-dD-rzl" secondAttribute="bottom" constant="10" id="iOI-2Y-6KF"/>
                             <constraint firstItem="MDx-KO-gMq" firstAttribute="width" secondItem="MDx-KO-gMq" secondAttribute="height" multiplier="1:1" id="mbw-Ss-wEs"/>
                             <constraint firstItem="fJr-mK-5Ve" firstAttribute="top" secondItem="UZh-XT-ZG8" secondAttribute="bottom" constant="25" id="sX5-hQ-V83"/>
-                            <constraint firstItem="0dW-Et-phU" firstAttribute="leading" secondItem="sbU-0o-FAI" secondAttribute="leading" constant="171" id="uwo-os-Wjr"/>
+                            <constraint firstItem="0dW-Et-phU" firstAttribute="leading" secondItem="sbU-0o-FAI" secondAttribute="leading" constant="170" id="uwo-os-Wjr"/>
                             <constraint firstItem="p55-HX-YdT" firstAttribute="top" secondItem="0dW-Et-phU" secondAttribute="bottom" constant="1" id="vQ1-JB-VJG"/>
                             <constraint firstItem="sbU-0o-FAI" firstAttribute="bottom" secondItem="fJr-mK-5Ve" secondAttribute="bottom" constant="10" id="x3F-TG-0km"/>
                             <constraint firstItem="Lcd-gc-16E" firstAttribute="trailing" secondItem="sbU-0o-FAI" secondAttribute="trailing" id="xq0-Dt-UVh"/>
@@ -616,7 +627,7 @@
         <!--日曆-->
         <scene sceneID="GqS-DE-Unz">
             <objects>
-                <viewController id="dRA-Uf-u4F" sceneMemberID="viewController">
+                <viewController id="dRA-Uf-u4F" customClass="FSCalendarViewController" customModule="NoteApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="BZX-1h-L2m">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
