--- a/NoteApp/Base.lproj/Main.storyboard
+++ b/NoteApp/Base.lproj/Main.storyboard
@@ -356,19 +356,11 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UZh-XT-ZG8">
-                                <rect key="frame" x="48" y="684" width="56" height="34"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="去散步">
-                                    <color key="titleColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                </state>
-                                <connections>
-                                    <action selector="walkBtn:" destination="UZb-3n-Tgo" eventType="touchUpInside" id="MGB-ae-5Ph"/>
-                                </connections>
-                            </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="開始計算多久沒散步" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LXL-ag-lbS">
-                                <rect key="frame" x="14" y="655" width="156" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="開始計算多久沒散步" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LXL-ag-lbS">
+                                <rect key="frame" x="30" y="655" width="171" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="171" id="dDa-Ck-wVb"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -379,57 +371,59 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="陪伴" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZdU-3I-j4a">
-                                <rect key="frame" x="312" y="99" width="34" height="20"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="陪伴" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZdU-3I-j4a">
+                                <rect key="frame" x="312" y="99" width="34" height="19"/>
                                 <fontDescription key="fontDescription" name="TamilSangamMN" family="Tamil Sangam MN" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ejc-eC-aXw">
-                                <rect key="frame" x="-12" y="198" width="414" height="142"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dOr-CU-x7V">
-                                        <rect key="frame" x="205" y="47" width="42" height="20"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                                <color key="backgroundColor" red="0.047690601399999998" green="0.97325724199999997" blue="0.98039215690000003" alpha="0.3595622859589041" colorSpace="custom" customColorSpace="sRGB"/>
-                            </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="home" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z6F-Rl-srU">
-                                <rect key="frame" x="195.33333333333334" y="126" width="75.666666666666657" height="31.666666666666686"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="home" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z6F-Rl-srU">
+                                <rect key="frame" x="145.33333333333334" y="126.00000000000001" width="75.666666666666657" height="31.666666666666671"/>
                                 <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="25"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UZh-XT-ZG8">
+                                <rect key="frame" x="50" y="684" width="56" height="34"/>
+                                <state key="normal" title="去散步">
+                                    <color key="titleColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="walkBtn:" destination="UZb-3n-Tgo" eventType="touchUpInside" id="MGB-ae-5Ph"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="Z6F-Rl-srU" firstAttribute="top" secondItem="ZdU-3I-j4a" secondAttribute="bottom" constant="7" id="0Z1-VT-7ll"/>
                             <constraint firstItem="sbU-0o-FAI" firstAttribute="trailing" secondItem="ZdU-3I-j4a" secondAttribute="trailing" constant="68" id="1YP-NB-Ju5"/>
                             <constraint firstItem="fJr-mK-5Ve" firstAttribute="leading" secondItem="Rbk-dD-rzl" secondAttribute="trailing" constant="11" id="2Xy-ak-zEX"/>
                             <constraint firstItem="sbU-0o-FAI" firstAttribute="trailing" secondItem="Ch4-ZI-ygU" secondAttribute="trailing" constant="137.5" id="4wL-ZX-LNX"/>
+                            <constraint firstItem="Lcd-gc-16E" firstAttribute="top" secondItem="p55-HX-YdT" secondAttribute="bottom" constant="26.329999999999998" id="65e-s8-AcI"/>
                             <constraint firstItem="Lcd-gc-16E" firstAttribute="trailing" secondItem="sbU-0o-FAI" secondAttribute="trailing" id="6LW-nU-fpk"/>
                             <constraint firstItem="E8X-fZ-hb1" firstAttribute="leading" secondItem="sbU-0o-FAI" secondAttribute="leading" constant="177" id="6Lg-N8-J2Y"/>
                             <constraint firstItem="sbU-0o-FAI" firstAttribute="bottom" secondItem="Rbk-dD-rzl" secondAttribute="bottom" constant="10" id="9UE-Yz-UHb"/>
                             <constraint firstItem="p55-HX-YdT" firstAttribute="top" secondItem="x2B-hZ-zJi" secondAttribute="bottom" constant="7" id="Azg-9c-W4I"/>
+                            <constraint firstItem="Lcd-gc-16E" firstAttribute="leading" secondItem="sbU-0o-FAI" secondAttribute="leading" id="DaB-VM-9gc"/>
+                            <constraint firstItem="LXL-ag-lbS" firstAttribute="leading" secondItem="x2B-hZ-zJi" secondAttribute="leading" constant="-20" id="DbA-w0-02l"/>
                             <constraint firstItem="0dW-Et-phU" firstAttribute="top" secondItem="Ch4-ZI-ygU" secondAttribute="bottom" constant="14.67" id="EqJ-eg-EHv"/>
                             <constraint firstItem="0dW-Et-phU" firstAttribute="leading" secondItem="x2B-hZ-zJi" secondAttribute="trailing" constant="33" id="KCw-Tk-tdu"/>
+                            <constraint firstAttribute="bottom" secondItem="LXL-ag-lbS" secondAttribute="bottom" constant="220" id="KnY-iK-BhX"/>
+                            <constraint firstItem="Lcd-gc-16E" firstAttribute="trailing" secondItem="sbU-0o-FAI" secondAttribute="trailing" id="L7t-YG-nHh"/>
                             <constraint firstItem="Ch4-ZI-ygU" firstAttribute="leading" secondItem="sbU-0o-FAI" secondAttribute="leading" constant="137.5" id="L83-cg-fl4"/>
+                            <constraint firstItem="LXL-ag-lbS" firstAttribute="top" secondItem="Lcd-gc-16E" secondAttribute="bottom" constant="52" id="LY2-Au-3D2"/>
+                            <constraint firstItem="UZh-XT-ZG8" firstAttribute="trailing" secondItem="x2B-hZ-zJi" secondAttribute="trailing" constant="-29" id="MRI-wt-EgQ"/>
                             <constraint firstItem="Lcd-gc-16E" firstAttribute="top" secondItem="p55-HX-YdT" secondAttribute="bottom" constant="26.329999999999998" id="N7I-NP-gr5"/>
                             <constraint firstItem="Rbk-dD-rzl" firstAttribute="leading" secondItem="sbU-0o-FAI" secondAttribute="leading" constant="14" id="Nwq-ie-v1b"/>
-                            <constraint firstItem="Z6F-Rl-srU" firstAttribute="leading" secondItem="p55-HX-YdT" secondAttribute="trailing" constant="130" id="Oap-4G-ext"/>
                             <constraint firstItem="x2B-hZ-zJi" firstAttribute="top" secondItem="sbU-0o-FAI" secondAttribute="top" constant="55" id="QPN-0o-3fO"/>
                             <constraint firstItem="Ch4-ZI-ygU" firstAttribute="top" secondItem="sbU-0o-FAI" secondAttribute="top" constant="9" id="RW8-fo-ShN"/>
+                            <constraint firstItem="UZh-XT-ZG8" firstAttribute="top" secondItem="LXL-ag-lbS" secondAttribute="bottom" constant="8" id="TUo-VL-Lyf"/>
                             <constraint firstItem="sbU-0o-FAI" firstAttribute="bottom" secondItem="fJr-mK-5Ve" secondAttribute="bottom" constant="10" id="Tmi-1G-IfT"/>
+                            <constraint firstItem="Z6F-Rl-srU" firstAttribute="leading" secondItem="p55-HX-YdT" secondAttribute="trailing" constant="80" id="dRW-oF-oMf"/>
                             <constraint firstItem="p55-HX-YdT" firstAttribute="leading" secondItem="sbU-0o-FAI" secondAttribute="leading" constant="30" id="gEl-EV-8WM"/>
                             <constraint firstItem="x2B-hZ-zJi" firstAttribute="leading" secondItem="sbU-0o-FAI" secondAttribute="leading" constant="50" id="h3I-cC-2dj"/>
                             <constraint firstItem="E8X-fZ-hb1" firstAttribute="top" secondItem="sbU-0o-FAI" secondAttribute="top" constant="27" id="ikS-UY-IF1"/>
                             <constraint firstItem="Lcd-gc-16E" firstAttribute="leading" secondItem="sbU-0o-FAI" secondAttribute="leading" id="jYM-tN-O58"/>
-                            <constraint firstItem="Lcd-gc-16E" firstAttribute="top" secondItem="Z6F-Rl-srU" secondAttribute="bottom" constant="26.329999999999998" id="jh1-UR-z8C"/>
+                            <constraint firstItem="Z6F-Rl-srU" firstAttribute="top" secondItem="0dW-Et-phU" secondAttribute="bottom" constant="15.67" id="jeb-6w-PLm"/>
                             <constraint firstItem="ZdU-3I-j4a" firstAttribute="top" secondItem="sbU-0o-FAI" secondAttribute="top" constant="55" id="mWe-cn-Fgv"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="sbU-0o-FAI"/>
