--- a/PetWidget/Base.lproj/MainInterface.storyboard
+++ b/PetWidget/Base.lproj/MainInterface.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="M4Y-Lb-cyx">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="M4Y-Lb-cyx">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
@@ -12,40 +12,63 @@
             <objects>
                 <viewController id="M4Y-Lb-cyx" customClass="TodayViewController" customModule="PetWidget" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" simulatedAppContext="notificationCenter" id="S3S-Oj-5AN">
-                        <rect key="frame" x="0.0" y="0.0" width="370" height="320"/>
+                        <rect key="frame" x="0.0" y="0.0" width="370" height="200"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BD" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tLc-cG-mVv">
-                                <rect key="frame" x="16" y="15" width="23" height="20.5"/>
+                                <rect key="frame" x="205" y="31" width="160" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="home" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Aft-TO-Jlw">
-                                <rect key="frame" x="16" y="43" width="44" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="距離生日剩下" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TBJ-dl-JC9">
+                                <rect key="frame" x="205" y="5" width="160" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xu5-kp-aRu">
-                                <rect key="frame" x="0.0" y="35" width="370" height="265"/>
+                                <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="xu5-kp-aRu" secondAttribute="height" multiplier="1:1" id="72l-2h-fCj"/>
+                                </constraints>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="home" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Aft-TO-Jlw">
+                                <rect key="frame" x="205" y="82.5" width="160" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="已經陪伴" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jYI-Lz-zAM">
+                                <rect key="frame" x="205" y="56.5" width="160" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="ssy-KU-ocm" firstAttribute="bottom" secondItem="xu5-kp-aRu" secondAttribute="bottom" constant="20" id="0J1-6y-1fQ"/>
-                            <constraint firstItem="tLc-cG-mVv" firstAttribute="leading" secondItem="S3S-Oj-5AN" secondAttribute="leading" constant="16" id="APg-rL-2ZM"/>
-                            <constraint firstItem="tLc-cG-mVv" firstAttribute="top" secondItem="S3S-Oj-5AN" secondAttribute="top" constant="15" id="BOv-s3-E6N"/>
-                            <constraint firstItem="xu5-kp-aRu" firstAttribute="trailing" secondItem="ssy-KU-ocm" secondAttribute="trailing" id="F7T-LA-Pc7"/>
-                            <constraint firstItem="xu5-kp-aRu" firstAttribute="leading" secondItem="ssy-KU-ocm" secondAttribute="leading" id="Oam-vx-mEL"/>
-                            <constraint firstItem="xu5-kp-aRu" firstAttribute="top" secondItem="S3S-Oj-5AN" secondAttribute="top" constant="35" id="SbJ-N5-cXt"/>
+                            <constraint firstItem="xu5-kp-aRu" firstAttribute="top" secondItem="S3S-Oj-5AN" secondAttribute="top" id="4vo-fy-v5r"/>
+                            <constraint firstItem="TBJ-dl-JC9" firstAttribute="top" secondItem="S3S-Oj-5AN" secondAttribute="top" constant="5" id="7cu-GS-h3w"/>
+                            <constraint firstItem="jYI-Lz-zAM" firstAttribute="top" secondItem="tLc-cG-mVv" secondAttribute="bottom" constant="5" id="9He-Se-09t"/>
+                            <constraint firstAttribute="trailing" secondItem="TBJ-dl-JC9" secondAttribute="trailing" constant="5" id="NMI-wN-DzN"/>
+                            <constraint firstItem="ssy-KU-ocm" firstAttribute="trailing" secondItem="Aft-TO-Jlw" secondAttribute="trailing" constant="5" id="NMh-Ca-2sT"/>
+                            <constraint firstItem="xu5-kp-aRu" firstAttribute="leading" secondItem="ssy-KU-ocm" secondAttribute="leading" id="NQT-bf-WDG"/>
+                            <constraint firstItem="Aft-TO-Jlw" firstAttribute="top" secondItem="jYI-Lz-zAM" secondAttribute="bottom" constant="5" id="OmL-gt-rDb"/>
+                            <constraint firstItem="jYI-Lz-zAM" firstAttribute="leading" secondItem="xu5-kp-aRu" secondAttribute="trailing" constant="5" id="SHN-ux-Fz1"/>
+                            <constraint firstItem="ssy-KU-ocm" firstAttribute="bottom" secondItem="xu5-kp-aRu" secondAttribute="bottom" id="ilA-6W-dLC"/>
+                            <constraint firstItem="tLc-cG-mVv" firstAttribute="top" secondItem="TBJ-dl-JC9" secondAttribute="bottom" constant="5" id="kKO-BC-1IR"/>
+                            <constraint firstItem="TBJ-dl-JC9" firstAttribute="leading" secondItem="xu5-kp-aRu" secondAttribute="trailing" constant="5" id="lNi-xE-gWp"/>
+                            <constraint firstItem="ssy-KU-ocm" firstAttribute="trailing" secondItem="tLc-cG-mVv" secondAttribute="trailing" constant="5" id="qOS-20-Q2G"/>
+                            <constraint firstItem="tLc-cG-mVv" firstAttribute="leading" secondItem="xu5-kp-aRu" secondAttribute="trailing" constant="5" id="wa7-Ui-RMs"/>
+                            <constraint firstItem="Aft-TO-Jlw" firstAttribute="leading" secondItem="xu5-kp-aRu" secondAttribute="trailing" constant="5" id="z5E-3e-JBn"/>
+                            <constraint firstItem="ssy-KU-ocm" firstAttribute="trailing" secondItem="jYI-Lz-zAM" secondAttribute="trailing" constant="5" id="zSM-Ih-X2v"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="ssy-KU-ocm"/>
                     </view>
                     <extendedEdge key="edgesForExtendedLayout"/>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-                    <size key="freeformSize" width="370" height="320"/>
+                    <size key="freeformSize" width="370" height="200"/>
                     <connections>
                         <outlet property="bdLabelWidget" destination="tLc-cG-mVv" id="zif-ao-lh0"/>
                         <outlet property="homeLabel" destination="Aft-TO-Jlw" id="M8t-D4-rSn"/>
@@ -53,6 +76,11 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vXp-U4-Rya" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="ycM-xn-S0F">
+                    <connections>
+                        <action selector="TapGesture:" destination="M4Y-Lb-cyx" id="JeP-Xa-mmE"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="137.68115942028987" y="96.428571428571431"/>
         </scene>
