--- a/NoteApp/Base.lproj/Main.storyboard
+++ b/NoteApp/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="87U-3K-FXp">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="87U-3K-FXp">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
@@ -468,7 +468,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <button key="tableFooterView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="hlV-MJ-fZ3">
-                            <rect key="frame" x="0.0" y="520" width="414" height="92"/>
+                            <rect key="frame" x="0.0" y="620" width="414" height="92"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" type="system" pointSize="27"/>
                             <state key="normal" title="完成"/>
@@ -479,38 +479,38 @@
                         <sections>
                             <tableViewSection headerTitle="寵物資料" id="GE9-6c-GBF" colorLabel="IBBuiltInLabel-Blue">
                                 <cells>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" rowHeight="200" id="biW-ei-MZg">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="200"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" rowHeight="300" id="biW-ei-MZg">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="300"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="biW-ei-MZg" id="YdY-bx-eph">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="200"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="300"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="5Hk-e2-oQv">
-                                                    <rect key="frame" x="20" y="12.5" width="374" height="164.5"/>
+                                                    <rect key="frame" x="0.0" y="1" width="414" height="297.5"/>
                                                     <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
                                                 </imageView>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q9W-9g-UWR">
-                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="200"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="300"/>
                                                     <connections>
                                                         <action selector="imageBtn:" destination="AM3-r8-Idg" eventType="touchUpInside" id="yK1-iM-TEM"/>
                                                     </connections>
                                                 </button>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="5Hk-e2-oQv" secondAttribute="trailing" id="NFw-wX-6jq"/>
+                                                <constraint firstItem="5Hk-e2-oQv" firstAttribute="top" secondItem="YdY-bx-eph" secondAttribute="top" id="PIz-Qi-C4h"/>
                                                 <constraint firstAttribute="bottom" secondItem="Q9W-9g-UWR" secondAttribute="bottom" id="Ush-QX-IZb"/>
-                                                <constraint firstItem="5Hk-e2-oQv" firstAttribute="top" secondItem="YdY-bx-eph" secondAttribute="topMargin" constant="0.33000000000000002" id="WPd-1g-LyG"/>
-                                                <constraint firstItem="5Hk-e2-oQv" firstAttribute="leading" secondItem="YdY-bx-eph" secondAttribute="leadingMargin" id="bSg-KX-WFD"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="5Hk-e2-oQv" secondAttribute="bottom" constant="10.67" id="cuM-ei-ckk"/>
-                                                <constraint firstItem="5Hk-e2-oQv" firstAttribute="trailing" secondItem="YdY-bx-eph" secondAttribute="trailingMargin" id="d7o-bH-JTx"/>
                                                 <constraint firstAttribute="trailing" secondItem="Q9W-9g-UWR" secondAttribute="trailing" id="fgN-S5-fFi"/>
                                                 <constraint firstItem="Q9W-9g-UWR" firstAttribute="top" secondItem="YdY-bx-eph" secondAttribute="top" id="gin-N2-3sK"/>
                                                 <constraint firstItem="Q9W-9g-UWR" firstAttribute="leading" secondItem="YdY-bx-eph" secondAttribute="leading" id="pLN-uR-VKP"/>
+                                                <constraint firstItem="5Hk-e2-oQv" firstAttribute="leading" secondItem="YdY-bx-eph" secondAttribute="leading" id="v0r-Re-mpK"/>
+                                                <constraint firstAttribute="bottom" secondItem="5Hk-e2-oQv" secondAttribute="bottom" id="yoa-9y-h7o"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" rowHeight="88" id="2bx-EP-nNi">
-                                        <rect key="frame" x="0.0" y="228" width="414" height="88"/>
+                                        <rect key="frame" x="0.0" y="328" width="414" height="88"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="2bx-EP-nNi" id="NdV-Ev-K45">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="88"/>
@@ -542,7 +542,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" rowHeight="88" id="x5P-tn-ddw">
-                                        <rect key="frame" x="0.0" y="316" width="414" height="88"/>
+                                        <rect key="frame" x="0.0" y="416" width="414" height="88"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="x5P-tn-ddw" id="wo8-qW-awz">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="88"/>
@@ -574,7 +574,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" rowHeight="88" id="R5I-eA-gcQ">
-                                        <rect key="frame" x="0.0" y="404" width="414" height="88"/>
+                                        <rect key="frame" x="0.0" y="504" width="414" height="88"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="R5I-eA-gcQ" id="5Ck-Yc-cVm">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="88"/>
